tests/behavior/error/null_pointer_arithmetic4.bz
function main()
{
	let p: ?*int32 = null;
	1 + p;
}
